fix(wal): ignore invalid record at the trimmed offset
Signed-off-by: Ning Yu <ningyu@automq.com>